--- a/revalida-shopping-app/src/app/modules/dashboard/pages/cart/cart.component.html
+++ b/revalida-shopping-app/src/app/modules/dashboard/pages/cart/cart.component.html
@@ -1,4 +1,4 @@
-<div class="container-fluid p-0">
+<section class="container-fluid p-0">
     <!-- Top Navigation with Search Bar -->
     <!-- <app-navbar></app-navbar> -->
   
@@ -123,5 +123,5 @@
         
     </div>
     </div>
-  </div>
+</section>
   
