--- a/revalida-shopping-app/src/app/modules/dashboard/pages/cart/cart.component.scss
+++ b/revalida-shopping-app/src/app/modules/dashboard/pages/cart/cart.component.scss
@@ -1,4 +1,8 @@
 /* Custom CSS (optional) */
+section {
+    height: 100%;
+    background-color: #f5f5f5;
+}
 img.img-thumbnail {
     width: 60px;
     height: auto;
