--- a/revalida-shopping-app/src/app/modules/dashboard/pages/my-purchases/my-purchases.component.html
+++ b/revalida-shopping-app/src/app/modules/dashboard/pages/my-purchases/my-purchases.component.html
@@ -392,7 +392,7 @@
                     </div>
                     <hr style="border: 2px solid black" />
                   </div>
-                  <p class="store">Click&Get Online Convenience Store</p>
+                  <p class="store">Click&Get Online Grocery Store</p>
                 </div>
               </div>
             </div>
