--- a/revalida-shopping-app/src/app/modules/admin/pages/orders/orders.component.scss
+++ b/revalida-shopping-app/src/app/modules/admin/pages/orders/orders.component.scss
@@ -1,5 +1,6 @@
 section {
-  height: 100%;
+  height: 110%;
+  background-color: #f5f5f5;
 }
 
 // Side Navbar styles
@@ -510,11 +511,12 @@ body {
     margin: 30px 0;
 }
 .table-wrapper {
-    min-width: 1000px;
+  min-width: 1050px;
 	background: #fff;
-	padding: 20px 25px;
+	padding: 20px 15px;
 	border-radius: 3px;
-	box-shadow: 0 1px 1px rgba(0,0,0,.05);
+	box-shadow: 0 1px 1px rgba(0, 0, 0, 0.447);
+  overflow: hidden;
 }
 .table-wrapper .btn {
 	float: right;
@@ -704,7 +706,7 @@ table.table tr th, table.table tr td {
 	margin: 2px 0 0 1px;
 }   
 .table-wrapper table.table .avatar {
-    // width: 40px;
+  width: 40px;
 	border-radius: 50%;
 	vertical-align: middle;
 	margin-right: 10px;
