--- a/revalida-shopping-app/src/app/modules/dashboard/pages/checkout/checkout.component.scss
+++ b/revalida-shopping-app/src/app/modules/dashboard/pages/checkout/checkout.component.scss
@@ -1,13 +1,14 @@
  /* Custom styles */
  section {
     height: 100%;
-    background-color: #fefcfa;
+    background-color: #f5f5f5;
     margin-bottom: 20px;
     // overflow: hidden;
   }
 
   .container {
-    margin-top: 50px;
+    // margin-top: 50px;
+    padding-top: 50px;
   }
 
   .card {
