Added prompt modal for deactivated users

--- a/revalida-shopping-app/src/app/modules/dashboard/pages/cart/cart.component.html
+++ b/revalida-shopping-app/src/app/modules/dashboard/pages/cart/cart.component.html
@@ -125,3 +125,23 @@
     </div>
 </section>
   
+<!-- Prompt Modal -->
+<input #openPromptModal type="hidden" data-bs-toggle="modal" data-bs-target="#promptModal">
+<div id="promptModal" class="modal fade">
+    <div class="modal-dialog modal-confirm">
+      <div class="modal-content">
+        <div class="modal-header">
+          <div class="icon-box">
+            <i class="material-icons">&#xE5CD;</i>
+          </div>				
+          <h4 class="modal-title w-100">Sorry!</h4>	
+        </div>
+        <div class="modal-body">
+          <p class="text-center">Your account has been deactivated, &nbsp;you are unable to perform this operation.</p>
+        </div>
+        <div class="modal-footer">
+          <button class="btn btn-danger w-100" data-bs-dismiss="modal">Understood</button>
+        </div>
+      </div>
+    </div>
+  </div>    
