Fixed some bugs in purchases page and orders page

--- a/revalida-shopping-app/src/app/modules/dashboard/pages/my-purchases/my-purchases.component.html
+++ b/revalida-shopping-app/src/app/modules/dashboard/pages/my-purchases/my-purchases.component.html
@@ -7,7 +7,7 @@
           <div class="side-menu">
             <div class="small-profile text-center mb-4">
               <img
-                src="{{ savedImageUrl }}"
+                src="{{ (savedImageUrl)? savedImageUrl : profileDefaultImg }}"
                 class="rounded-circle"
                 alt="User Avatar"
               />
